<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/title_textview"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/change_password"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_edittext"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/confirm_new_password"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_edittext"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/save_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/lavender"
        app:cornerRadius="20dp"/>

</LinearLayout>
