<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        app:cardCornerRadius="30sp"
        app:cardElevation="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/registerText"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/lavender"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:autofillHints="Email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/confirm_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/registerButton"
                android:text="@string/register"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_message"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:textColorLink="@color/lavender"
                android:textStyle="normal"
                android:id="@+id/loginTextView"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>