<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/lavender"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:autofillHints="Email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/loginButton"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register_message"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:textColorLink="@color/lavender"
                android:autoLink="web"
                android:textStyle="normal"
                android:id="@+id/registerTextView"
                />

            <TextView
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:layout_height="40dp"
                android:text="@string/socialLogin"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:id="@+id/socialLogin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="20dp"
                    android:id="@+id/googleBtn"
                    android:src="@drawable/icons8_google"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="20dp"
                    android:id="@+id/facebook_btnafasfsa"
                    android:src="@drawable/icons8_facebook"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>